# freshpaper

./: README.rst  freshpaper.py  pyproject.toml  setup.py
